--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Sherelle Garwood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -32,10 +32,10 @@
 							<li><a href="About.html">About Me</a></li>
 							<li><a href="Launch Module.html">Launch Module</a></li>
 							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
+							<li><a href="Module 3.html">The Human Factor</a></li>
 							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
-							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
+							<li><a href="Module 5.html">Information Risk Management</a></li>
+							<li><a href="Module 6.html">Secure Systems Architecture</a></li>
 							<li><a href="Project.html">Project</a></li>
 							<ul>
 					</nav>
@@ -44,10 +44,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>MSc Computer Science E-Portfolio</h1>
+								<h1>MSc Cyber Security E-Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>My e-portfolio based on the work carried out on the MSc Computer Science programme.</p>
+								<p>My e-portfolio based on the work carried out on the MSc Cyber Security programme.</p>
 							</div>
 						</div>
 					</section>
@@ -61,7 +61,7 @@
 								<header class="major">
 									<h2>About Me</h2>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+								<p>My name is Sherelle Garwood, I am a Computer Science secondary school teacher from London. I will be using this site to document my studies towards a MSc in Cyber Security</p>
 								<ul class="actions">
 								<li><a href="About.html" class="button">Learn more</a></li>
 								</ul>
@@ -77,7 +77,7 @@
 								</span>
 								<header class="major">
 									<h3><a href="Launch Module.html" class="link">Launch module</a></h3>
-									<p>Introductory module</p>
+									<p>Introduction to Cyber Security</p>
 								</header>
 							</article>
 							<article>
@@ -86,7 +86,7 @@
 								</span>
 								<header class="major">
 									<h3><a href="Module 2.html" class="link">Secure Software Development</a></h3>
-									<p>More on the foundations of computer science and software development</p>
+									<p>The foundations of Computer Science and Software Development</p>
 								</header>
 							</article>
 							<article>
@@ -94,7 +94,7 @@
 									<img src="images/pic03.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 3.html" class="link">Object-Oriented Information Systems</a></h3>
+									<h3><a href="Module 3.html" class="link">The Human Factor</a></h3>
 								</header>
 							</article>
 							<article>
@@ -110,7 +110,7 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 5.html" class="link">Software Engineering PM</a></h3>
+									<h3><a href="Module 5.html" class="link">Secure System Architecture</a></h3>
 								</header>
 							</article>
 							<article>
@@ -126,7 +126,7 @@
 									<img src="images/pic06.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Project.html" class="link">Project</a></h3>
+									<h3><a href="Project.html" class="link">MSc Cyber Security Project</a></h3>
 									<p>My work on ...... which led to the creation of .....</p>
 								</header>
 							</article>
@@ -164,7 +164,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">sherelle.garwood@live.co.uk</a>
 									</div>
 								</section>
 								<section>
@@ -179,8 +179,8 @@
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
 										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										London, TN 00000<br />
+										United Kingdom</span>
 									</div>
 								</section>
 							</section>
