--- a/generic.html
+++ b/generic.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><span>Jane Doe</span></a>
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
