--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">The Human Factor</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Information Risk Management</a></li>
-							<li><a href="Module 6.html">Secure Systems Architecture</a></li>
+							<li><a href="Launch Module.html">Launching into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network and Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
 							<li><a href="Project.html">Project</a></li>
 							<ul>
 					</nav>
@@ -85,8 +85,8 @@
 									<img src="images/pic02.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 2.html" class="link">Secure Software Development</a></h3>
-									<p>The foundations of Computer Science and Software Development</p>
+									<h3><a href="Module 2.html" class="link">Network and Information Security Management</a></h3>
+									<p>The underpinning concepts of Network Security</p>
 								</header>
 							</article>
 							<article>
@@ -94,7 +94,8 @@
 									<img src="images/pic03.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 3.html" class="link">The Human Factor</a></h3>
+									<h3><a href="Module 3.html" class="link">Information Risk Management</a></h3>
+									<p>An introduction to security and governance principles, and standards</p>
 								</header>
 							</article>
 							<article>
@@ -102,7 +103,8 @@
 									<img src="images/pic04.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 4.html" class="link">Network and Information Security Management</a></h3>
+									<h3><a href="Module 4.html" class="link">Secure Software Development</a></h3>
+									<p>The underpinning concepts and skills of Secure Software Development</p>
 								</header>
 							</article>
 							<article>
@@ -110,7 +112,8 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 5.html" class="link">Secure System Architecture</a></h3>
+									<h3><a href="Module 5.html" class="link">Secure Systems Architecture</a></h3>
+									<p>The underpinning concepts and principles of Secure Systems Architecture (SSA)</p>
 								</header>
 							</article>
 							<article>
@@ -118,7 +121,8 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 6.html" class="link">Research Methods and Professional Practice</a></h3>
+									<h3><a href="Module 6.html" class="link">The Human Factor</a></h3>
+									<p>Methods to meet human factor cyber security challenges</p>
 								</header>
 							</article>
 							<article>
