--- a/Module 2.html
+++ b/Module 2.html
@@ -7,7 +7,7 @@ A new Landing page has to be created for each option
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Sherelle Garwood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -32,12 +32,12 @@ A new Landing page has to be created for each option
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
-							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
 					</nav>
@@ -50,11 +50,10 @@ A new Landing page has to be created for each option
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Secure Software Development</h1>
+								<h1>Network And Inofrmation Security Management</h1>
 							</header>
 							<div class="content">
-								<p>Understanding how to develop secure software<br />
-								Nice one.</p>
+								<p>The underpinning concepts of network security</p>
 							</div>
 						</div>
 					</section>
@@ -70,9 +69,10 @@ A new Landing page has to be created for each option
 									</header>
 									<p>I will learn:</p>
 									<ul>
-										<li>Dolor etiam magna etiam.</li>
-										<li>Sagittis lorem eleifend.</li>
-										<li>Felis dolore viverra.</li>
+										<li>To identify and analyse security risks and vulnerabilities in IT network systems and determine appropriate methodologies, tools and techniques to manage and/or solve them.</li>
+										<li>To design and critically appraise computer programs and systems to produce solutions that help manage and audit risk and security issues.</li>
+										<li>To gather and synthesise information from multiple sources (including internet security alerts & warning sites) to aid in the systematic analysis of security breaches and issues.</li>
+										<li>To articulate the legal, social, ethical and professional issues faced by information security professionals.</li>
 									</ul>
 								</div>
 							</section>
@@ -86,9 +86,9 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Artefacts</h3>
+												<h3>Unit and Seminar Tasks</h3>
 											</header>
-											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
+											<p>Weekly tasks carried out for each unit</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -104,7 +104,7 @@ A new Landing page has to be created for each option
 											<header class="major">
 												<h3>Reflections</h3>
 											</header>
-											<p>What exactly have I learnt and how?</p>
+											<p>Unit reflections for internet and information security management</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">More Information here</a></li>
 											</ul>
@@ -135,7 +135,7 @@ A new Landing page has to be created for each option
 									<header class="major">
 										<h2>Professional Skills Matrix and Action Plan</h2>
 									</header>
-									<p>What skills have I gained or enhaced as a result of this module and how can I use it?  What else do I need to learn?</p>
+									<p>Skills have I gained or enhaced as a result of this module</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button next">Learn More</a></li>
 									</ul>
@@ -174,23 +174,21 @@ A new Landing page has to be created for each option
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">sherelle.garwood@live.co.uk</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span> </span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>London, United Kingdom</span>
 									</div>
 								</section>
 							</section>
