--- a/generic.html
+++ b/generic.html
@@ -30,14 +30,14 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
-							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
 					</nav>
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic title</h1>
+										<h1>Unit and Seminar Tasks</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<p>Just a place for more information from the various key pages</p>
