--- a/nismfiles/nism_u1.html
+++ b/nismfiles/nism_u1.html
@@ -11,8 +11,8 @@
 		<title>Sherelle Garwood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="css/main1.css" />
-		<noscript><link rel="stylesheet" href="css/noscript1.css" /></noscript>
+		<link rel="stylesheet" href="nismfiles/main1.css" />
+		<noscript><link rel="stylesheet" href="nismfiles/noscript1.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
