--- a/nism_u1.html
+++ b/nism_u1.html
@@ -49,12 +49,13 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Unit and Seminar Tasks</h1>
+										<h1>Unit 1</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<h3>Units</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h3>Unit 1 Overview</h3>
+									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security and understand how they underpin the field of Information Security.</p>
+									<h3>Unit 1 Overview</h3>
+									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security and understand how they underpin the field of Information Security.</p>
 									<p><a href="nism_u1.html">Unit 1</a></p>
 									<p><a href="nism_u2.html">Unit 2</a></p>
 									<p><a href="nism_u3.html">Unit 3</a></p>
