--- a/nism_u1.html
+++ b/nism_u1.html
@@ -53,9 +53,24 @@
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h3>Unit 1 Overview</h3>
-									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security and understand how they underpin the field of Information Security.</p>
-									<h3>Unit 1 Overview</h3>
-									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security and understand how they underpin the field of Information Security.</p>
+									<p>Week 1 involved discussing the basics of Information Security Management,the four tenets of security (availability, confidentiality, integrity, non-repudiation) and understand how they underpin the field of Information Security.</p>
+									<h3>Collaborative Learning Discussion: Compromising a Medical Mannequin</h3>
+									<p>The ‘Compromising a Medical Mannequin’ research paper by Glisson et al’s (2015), explored the impact of security breaches on medical mannequin’s within training facilities. Medical training devices have become increasingly reliant on technology, leading to a growing need to mitigate against any possible security challenges.
+
+The research focussed on the iStan medical mannequin. The student team identified brute force, denial of service and security control attacks as potential threats that could take advantage of weaknesses within the system. A DoS attack was instigated using the HPING3 testing tool, and a brute force attack against the WPS was carried out using Reaver (included with BackTrack 5).
+
+A firewall is usually the first line of defence when protecting against DoS attacks. Firewalls are used to examine packets and respond based upon their perceived threat. This could help to block malicious incoming traffic and prevent the attack. Due to the importance of the medical mannequin’s and the implications that a security breach may have, it would also be useful to register to a reputable service that tracks network traffic. This way, the faculty can be contacted regarding any abnormal activity associated with a DoS attack. In regards, to protection against potential brute force attacks targeting the WPS, WPA/2 encryption can help by providing a unique key for each client instead of a generic password. This reduces the likelihood of a successful brute force attack. Another useful method is to enable MAC address filtering, this would ensure that only registered faculty devices are able to connect to the network.
+
+ 
+
+References
+
+Adams, D., 2020. hping3 flood ddos. [online] Linuxhint.com. Available at: [Accessed 13 March 2022].
+Glisson, W. B., McDonald, T., Campbell, M., Andel, T., Jacobs, M. & Mayr, J., (2015) ‘Compromising a Medical Mannequin’, AMCIS 2015 Proceedings. Puerto Rico, 13-14 August. New York: AIS eLibrary. 1-11.
+Duc, H., 2014. SYN Flood Attacks- 'How to protect?'- article. [online] Hakin9 - IT Security Magazine. Available at: [Accessed 13 March 2022].
+Us.norton.com. 2018. What you need to do about the WPA2 Wi-Fi network vulnerability. [online] Available at: [Accessed 13 March 2022].
+Zyxel.com. 2019. WPS Brute Force Attack | ZyXEL. [online] Available at: [Accessed 13 March 2022].
+</p>
 									<p><a href="nism_u1.html">Unit 1</a></p>
 									<p><a href="nism_u2.html">Unit 2</a></p>
 									<p><a href="nism_u3.html">Unit 3</a></p>
