--- a/nism_u1.html
+++ b/nism_u1.html
@@ -70,6 +70,68 @@
 <p>Duc, H., 2014. SYN Flood Attacks- 'How to protect?'- article. [online] Hakin9 - IT Security Magazine. Available at: [Accessed 13 March 2022].</p>
 <p>Us.norton.com. 2018. What you need to do about the WPA2 Wi-Fi network vulnerability. [online] Available at: [Accessed 13 March 2022].</p>
 <p>Zyxel.com. 2019. WPS Brute Force Attack | ZyXEL. [online] Available at: [Accessed 13 March 2022].</p>
+<h3>Team Contract</h3
+<p> Team Contract 
+
+
+Team Name: Team LWS
+
+
+GOALS: 
+<ul>
+	<li>Completing required assignments as a team.</li>
+</ul>
+
+Skills we want to develop/refine:
+<ul>
+<li>Project management skills</li>
+<li>Define the project scope to avoid scope creep.</li>
+<li>Stakeholder management - identify all parties involved, and their interest in the project.</li>
+<li>Learning how to apply STRIDE and DREAD methods in practice.</li>
+<li>Information security risk identification and management.</li>
+<li>Team work, including learning to buy into someone else's idea even if it wasn’t one's personal preference.</li>
+<li>Time management and planning skills when working with other people on the project.</li>
+</ul>
+
+
+EXPECTATIONS: What do we expect of one another in regard to attendance at meetings, participation, frequency of communication, the quality of work, etc.?
+<ul>
+<li>All members to participate fully in discussions, group assignments and group chats.</li>
+<li>Full attendance at meetings; notifying group members if you cannot attend or will be late.</li>
+<li>Work collaboratively as a team, listening and respecting each other’s ideas.</li>
+<li>Everyone is given an opportunity to contribute, use their experience, skills and ideas throughout the project. No idea/thought is silly and everyone is encouraged to express theirs.</li>
+</ul>
+
+
+POLICIES & PROCEDURES: What rules can we agree on to help us meet our goals and expectations, such as preparatory tasks, generating ideas, evaluating outcomes? 
+<ul>
+<li>On the first day of each unit team deadlines (both individual team members and overall team ones) are agreed if applicable and documented in a group roadmap document. Where it makes sense, deadlines for future unit work are agreed upon in advance.</li>
+<li>Checklists are created for each assignment related tasks and responsible team members are assigned. Deadlines are specified for each task.</li>
+<li>Weekend before the assignment is due a team meeting is held to finalise the work.</li>
+<li>Everyone must contribute at each stage of the project/assignment. This includes sharing thoughts in group chats, adding research notes to shared group files, etc.</li>
+<li>Team members requiring help on their assigned task must be able to ask for it from their team. This should not be used to score the team member’s performance down in the Peer Assessment.</li>
+<li>Meetings will only be scheduled at times which are between 9am and 9pm local time for each participant.</li>
+</ul>
+
+ROLES: Which roles do we need in this project and how do we allocate them? Will there be a project lead?  Is there a need to rotate roles?
+<ul>
+<li>Group leader/facilitator - Ags Angelides (to schedule meetings, update the meeting minutes if applicable, keep an eye on deadlines, track the tasks to completion, do group submissions)</li>
+<li>The rest of the group roles will remain flexible and will be addressed on per task/project basis.</li>
+</ul>
+
+CONSEQUENCES: How will we address non-performance regarding these goals, expectations, policies and procedures?  How do we resolve disagreements?
+<ul>
+<li>Non-contributing team members will be highlighted in the peer assessment form.</li>
+<li>Least contributing team members will be given an opportunity to pick up extra tasks to avoid being scored down on the peer assessment form.</li>
+<li>Disagreements on the assignment approach and implementation will be put to vote among the team members. The option with most votes will be the one applied and each team member will be expected to buy into it.</li>
+</ul>
+
+
+
+By signing this contract, we confirm that:
+we have participated in formulating these goals, expectations, roles, procedures, and consequences as stated in this contact.
+we agree to abide by the contents of this contract
+
 
 									<p><a href="nism_u1.html">Unit 1</a></p>
 									<p><a href="nism_u2.html">Unit 2</a></p>
