--- a/nism_u1.html
+++ b/nism_u1.html
@@ -70,11 +70,10 @@
 <p>Duc, H., 2014. SYN Flood Attacks- 'How to protect?'- article. [online] Hakin9 - IT Security Magazine. Available at: [Accessed 13 March 2022].</p>
 <p>Us.norton.com. 2018. What you need to do about the WPA2 Wi-Fi network vulnerability. [online] Available at: [Accessed 13 March 2022].</p>
 <p>Zyxel.com. 2019. WPS Brute Force Attack | ZyXEL. [online] Available at: [Accessed 13 March 2022].</p>
+									
 <h3>Team Contract</h3
-<p> Team Contract 
 
-
-Team Name: Team LWS
+	<p>Team Name: Team LWS</p>
 
 
 GOALS: 
