--- a/nism_u2.html
+++ b/nism_u2.html
@@ -57,66 +57,17 @@
 									<h3>Seminar 1 preparation: STRIDE and DREAD tools</h3>
 									<p> <iframe src="https://onedrive.live.com/embed?cid=F9D90B697D54B4B7&amp;resid=F9D90B697D54B4B7%216507&amp;authkey=AMQgsZEhKOHC9O4&amp;em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> </p>
 									
-<h3>Team Contract</h3
+<h3>Peer Responses </h3
 
-	<p>Team Name: Team LWS</p>
+	<p>I really enjoyed your post detailing the security threats outlined within the ‘Compromising a medical mannequin’ article. As you mentioned in your post, a brute force attack against the Wi-Fi Protected Setup register PIN numbers using Reaver. Updating the firmware so that it protects against these vulnerabilities seems like the most useful mitigation technique, however, healthcare facilities seem to be reluctant to do this. Do you think this is possibility due to the cost of updated firmware?</p>
 
+<p>Your post also discussed the use of HPING3 to compromise the network, causing a denial of service attack. Firewall and intrusion detection systems are a strong form of prevention against denial of service attacks. However, the systems being used in the medical facility are legacy systems with mass amounts of vulnerabilities. Do you think an overhaul of the network devices would be more useful than trying to implement protective measures on a flawed system?</p>
 
-GOALS: 
-<ul>
-	<li>Completing required assignments as a team.</li>
-</ul>
+<p>References</p>									
+<p>Glisson, W., Andel, T., McDonald, T., Jacobs, M., Campbell, M. & Mayr, J. (2015) Compromising a Medical Mannequin. Healthcare Information Systems and Technology (Sighealth). </p>
 
-Skills we want to develop/refine:
-<ul>
-<li>Project management skills</li>
-<li>Define the project scope to avoid scope creep.</li>
-<li>Stakeholder management - identify all parties involved, and their interest in the project.</li>
-<li>Learning how to apply STRIDE and DREAD methods in practice.</li>
-<li>Information security risk identification and management.</li>
-<li>Team work, including learning to buy into someone else's idea even if it wasn’t one's personal preference.</li>
-<li>Time management and planning skills when working with other people on the project.</li>
-</ul>
-
-
-EXPECTATIONS: What do we expect of one another in regard to attendance at meetings, participation, frequency of communication, the quality of work, etc.?
-<ul>
-<li>All members to participate fully in discussions, group assignments and group chats.</li>
-<li>Full attendance at meetings; notifying group members if you cannot attend or will be late.</li>
-<li>Work collaboratively as a team, listening and respecting each other’s ideas.</li>
-<li>Everyone is given an opportunity to contribute, use their experience, skills and ideas throughout the project. No idea/thought is silly and everyone is encouraged to express theirs.</li>
-</ul>
-
-
-POLICIES & PROCEDURES: What rules can we agree on to help us meet our goals and expectations, such as preparatory tasks, generating ideas, evaluating outcomes? 
-<ul>
-<li>On the first day of each unit team deadlines (both individual team members and overall team ones) are agreed if applicable and documented in a group roadmap document. Where it makes sense, deadlines for future unit work are agreed upon in advance.</li>
-<li>Checklists are created for each assignment related tasks and responsible team members are assigned. Deadlines are specified for each task.</li>
-<li>Weekend before the assignment is due a team meeting is held to finalise the work.</li>
-<li>Everyone must contribute at each stage of the project/assignment. This includes sharing thoughts in group chats, adding research notes to shared group files, etc.</li>
-<li>Team members requiring help on their assigned task must be able to ask for it from their team. This should not be used to score the team member’s performance down in the Peer Assessment.</li>
-<li>Meetings will only be scheduled at times which are between 9am and 9pm local time for each participant.</li>
-</ul>
-
-ROLES: Which roles do we need in this project and how do we allocate them? Will there be a project lead?  Is there a need to rotate roles?
-<ul>
-<li>Group leader/facilitator - Ags Angelides (to schedule meetings, update the meeting minutes if applicable, keep an eye on deadlines, track the tasks to completion, do group submissions)</li>
-<li>The rest of the group roles will remain flexible and will be addressed on per task/project basis.</li>
-</ul>
-
-CONSEQUENCES: How will we address non-performance regarding these goals, expectations, policies and procedures?  How do we resolve disagreements?
-<ul>
-<li>Non-contributing team members will be highlighted in the peer assessment form.</li>
-<li>Least contributing team members will be given an opportunity to pick up extra tasks to avoid being scored down on the peer assessment form.</li>
-<li>Disagreements on the assignment approach and implementation will be put to vote among the team members. The option with most votes will be the one applied and each team member will be expected to buy into it.</li>
-</ul>
-
-
-
-By signing this contract, we confirm that:
-we have participated in formulating these goals, expectations, roles, procedures, and consequences as stated in this contact.
-we agree to abide by the contents of this contract
-
+<p>Slabodkin, G. (2021) Legacy medical devices, growing hacker threats create perfect storm of cybersecurity risks. Available from: https://www.medtechdive.com/news/legacy-medical-devices-growing-hacker-threats-create-medtech-cyber-risks/602157/ [Accessed 16 March 2022] 
+	</p>
 
 								</div>
 							</section>
