--- a/nism_u2.html
+++ b/nism_u2.html
@@ -53,7 +53,7 @@
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h3>Unit 2 Overview</h3>
-									<p>During unit 2 we discussed several real-world issues connected with the vulnerabilities of, and threats towards, medical implants.</p>
+									<p>During unit 2, we discussed several real-world issues connected with the vulnerabilities of, and threats towards, medical implants.</p>
 									<h3>Seminar 1 preparation: STRIDE and DREAD tools</h3>
 									<p> <iframe src="https://onedrive.live.com/embed?cid=F9D90B697D54B4B7&amp;resid=F9D90B697D54B4B7%216507&amp;authkey=AMQgsZEhKOHC9O4&amp;em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> </p>
 									
