--- a/nism_u3.html
+++ b/nism_u3.html
@@ -1,1 +1,135 @@
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	This is an example of a sub page for each module.  It has to be replicated in each module, containing the requested contents -  artefacts, notes, reflections etc
+	Ensure you give a different title to each replica and link it to the main module page accordingly.
+-->
+<html>
+	<head>
+		<title>Sherelle Garwood</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="css/main.css" />
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="About.html">About Me</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
+							<li><a href="Project.html">Project</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main" class="alt">
+
+						<!-- One -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Unit 3</h1>
+									</header>
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<h3>Unit 3 Overview</h3>
+									<p>During unit 3, we discussed the history of networking, the ISO/OSI 7-layer model and how it relates to modern networks and the TCP/IP as a basis of the internet. We also used some basic internet tools including ping, traceroute and dig</p>
+									<h3>Summary post for collaborative discussion 1</h3>
+                  <p> The ‘Compromising a Medical Mannequin’ research paper by Glisson et al (2015), explored the impact of security breaches on medical mannequin’s within a university teaching facility. The main risks identified and discussed in the Compromising a Medical Mannequin paper (Glisson et al, 2015) are: </p>
+<p>
+  <ul>
+<li> Brute force attacks against 802.11 wireless transmissions, specifically the Wi-Fi Protected Setup (WPS) feature. This was carried out using Reaver by the student research team.</li>
+    <li> DOS attack using the HPING3 testing tool.</li>
+                  </ul>
+                  </p>
+
+ 
+
+<p>The WiFi protected setup (WPS) was a significant vulnerability of the medical mannequin system. WPS is insecure as most routers do not timeout after the wrong pin has been entered (reference). This allows potential hackers to continue checking numerous combinations until the correct pin is found. Consequently, the best course of action would be to disable the WPS to prevent a brute force attack. However, another useful mitigation technique would be to use WPA2 encryption, which provides a unique key for each client instead of a standardised pin. This was reiterated by Abidemi, who agreed that WPA2 reduces the likelihood of pin compromise.</p>
+
+<p>In regards to potential DoS attacks within the medical facility, I suggested that a firewall or threat detection service would be most useful to help prevent against this. This could help to automatically block malicious incoming traffic or alert in-house IT services of a security break. Kevin agreed with this and added the use of honeypots may also be a useful mititgation. This creates a virtual trap to lure cybercriminals away from legitimate targets. “Brook (2016) describes how researchers were able to use honeypots that mimic medical devices to discover numerous attempts to exploit vulnerabilities in those devices.” (Kevin reference)This can be used to gather information about weaknesses within the medical mannequin network and types of attacks that may be used to exploit them.</p>
+<p>References</p>
+<p>Adelakun, A., 2022. Peer Response. [Blog] Available at: [Accessed 29 March 2022].</p>
+<p>Cicnavi, 2020. Difference between WEP, WPA, WPA2, WPA3, WPS WiFi Security. [online] Utilize Windows. Available at: [Accessed 29 March 2022].</p>
+<p>Glisson, W. B., McDonald, T., Campbell, M., Andel, T., Jacobs, M. & Mayr, J., (2015) ‘Compromising a Medical Mannequin’, AMCIS 2015 Proceedings. Puerto Rico, 13-14 August. New York: AIS eLibrary. 1-11.</p>
+<p>Learning Center. 2020. What is a Honeypot | Honeynets, Spam Traps & more | Imperva. [online] Available at: [Accessed 29 March 2022].</p>
+<p>Peuhkurinen, K., 2022. Peer Response. [Blog] Available at: [Accessed 29 March 2022]. </p>              
+									
+<h3> Practical Activity </h3
+
+	<p>During the Unit 3 we have been asked to perform quick individual scans on the website assigned to our team (Group 1): https://loadedwithstuff.co.uk/</p>
+                <p> <b> How many hops from your machine to your assigned website? </b> <p>
+                <p> There were 11 hops from my machine to the website. I gathered this information by using the TRACERT command. </p>
+                <p> <b> Which step causes the biggest delay in the route? What is the average duration of that delay? </b> <p>
+                <p> The step with the biggest delay was hop 3. Most members of my team also found this to be the case when discussed during the team meeting. Using the PING command, I gathered that the average delay was 30 ms. During our meeting, we discussed that this was likely to be due to the hop being based outside of the UK.  </p>
+                <p> <b> What are the main nameservers for the website? </b> <p>
+                <p> Using the WHOIS command, I found that the main nameservers were: </p>
+                <p> 
+                  <ul>
+                    <li> ns1.a2hosting.com </li>
+                    <li> ns2.a2hosting.com </li>
+                    <li> ns3.a2hosting.com </li>
+                    <li> ns4.a2hosting.com </li>
+                </ul>
+                </p>
+             <p> <b> Who is the registered contact? </b> <p>
+                <p> Using the WHOIS command, I found that the registered contact is: eNom LLC</p>
+                <p> <b> What is the MX record for the website? </b> <p>
+                <p> Using NSLOOKUP, I found that the MX record is: mail.loadedwithstuff.co.uk</p>
+                <p> <b> Where is the website hosted? </b> <p>
+                <p> I used multiple IP adress locater tools to try and find where the website was hosted. Most of these stated that the website is hosted in the US, Kansas. However, during the team meeting, some members of the group located Netherlands as the host</p>
+                <p> <b> Difficulties with the scanning exercise </b> <p>
+                <p> I found that I was able to find the command used to enable to answer the questions fairly quickly. However, most of the commands were for Linux systems and I would then have to find a Windows alternative </p> 
+
+
+								</div>
+							</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
+
+	</body>
+</html>
