--- a/nism_u4.html
+++ b/nism_u4.html
@@ -1,1 +1,129 @@
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	This is an example of a sub page for each module.  It has to be replicated in each module, containing the requested contents -  artefacts, notes, reflections etc
+	Ensure you give a different title to each replica and link it to the main module page accordingly.
+-->
+<html>
+	<head>
+		<title>Sherelle Garwood</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="css/main.css" />
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="About.html">About Me</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
+							<li><a href="Project.html">Project</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main" class="alt">
+
+						<!-- One -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Unit 4</h1>
+									</header>
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<h3>Unit 4 Overview</h3>
+									<p>During unit 3, we practiced using built in utilities for network troubleshooting and discussed the outputs produced by those tools.</p>
+									<h3>Initial post (joint): Scanning Exercise</h3>
+                  <p> My team and I produced a joint post detailing the scanning exercise for our website: </p>
+                  <p> During the Unit 3 we have been asked to perform quick individual scans on the website assigned to our team (Group 1): https://loadedwithstuff.co.uk/
+
+Our team used a combination of traceroute, tracert, and tracepath to record the number of hops to our destination. The number varied between 10 and 15. The hop with the highest latency, presented itself between the middle and the end of the traceroute, i.e. between hops 7 and 11 respectively. No lost packets were observed.
+
+The differences in the hop numbers can be explained by our geographical locations (Fei et al, 1998) and our internet providers; our team members have conducted these scans from the UK, Canada, Qatar and Nigeria. The latency differences will be due to the differences between our bandwidth. </p>
+
+<p>Next we were asked to find the mail and name servers for the domain. We used a combination of nslookup and web-based tools to identify the name servers below. This indicated to us that the site is being hosted by A2 Hosting. <p>
+<p>
+  <ul>
+    <li>ns1.a2hosting.com</li>
+    <li>ns2.a2hosting.com</li>
+    <li>ns3.a2hosting.com</li>
+    <li>ns4.a2hosting.com</li>
+                  </ul>
+                  </p>
+<p>The MX record for the assigned site was confirmed by everyone to be mail.loadedwithstuff.co.uk.</p>
+
+<p>Next we were asked to provide the registered contact for the domain. Again we used a combination of the whois command and various web-based resources. We were able to confirm that the registrar for the site is: </p>
+
+<p>eNom LLC [Tag = ENOM]</p>
+
+<p>URL: http://www.enom.com</p>
+
+<p>While contact information for domains used to be public information, this was changed as a result of the introduction of the GDPR when the Internet Corporation for Assigned Names and Numbers (ICANN) agreed to start treating this data as personal information that needs to be kept private (Goyal, 2018). </p>
+
+<p>The final part of the scan was to identify the physical location of the server hosting the site. Using a variety of web-based IP address geolocation services, we initially suspected that the server was hosted in the USA. However, IP address geolocation is not always accurate, especially when considering addresses assigned to Internet companies, which are free to assign their addresses without regard to geography (IPLocation, 2016). With this in mind, we looked more closely at the network hops identified in our trace routes. These routes all seemed to point to Amsterdam as the correct location. One of our group resides in North America, which made their route particularly interesting; if the site was in the USA then their route should be quite short. Instead, the route showed a trans-Atlantic hop from Montreal to Liverpool which would not have been necessary if the site was in the USA (Pepelnjak, 2019). Based on all of the evidence available, we concluded that the hosting server is most likely located in Amsterdam.</p>
+
+<p>Difficulties experienced by the team members were also discussed during the team meeting, and it appears that most were due to the lack of hands-on network experience.</p>
+
+<p>References</p>
+
+<p>Fei, A., Pei, G., Liu, R., Zhang, L. (1998) Measurements On Delay And Hop-Count Of The Internet.</p>
+
+<p>Goyal, V. (2018) How GDPR almost turned off WHOIS. Available at: https://www.linkedin.com/pulse/how-gdpr-almost-turned-off-whois-vivek-goyal/ [Accessed 3 April 2022].</p>
+
+<p>IPLocation. (2016) How accurate is IP-based Geolocation Lookup? Available at https://www.iplocation.net/geolocation-accuracy [Accessed 3 April 2022].</p>
+
+<p>Pepelnjak, I. (2019) BGP tutorial: How the routing protocol works. Available at https://www.techtarget.com/searchnetworking/feature/BGP-tutorial-The-routing-protocol-that-makes-the-Internet-work [Accessed 3 April 2022].</p>
+
+
+								</div>
+							</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
+
+	</body>
+</html>
