--- a/nism_u6.html
+++ b/nism_u6.html
@@ -60,6 +60,8 @@
 
                   <h3>Seminar 3 preparation</h3>
                   <p> I read “Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. (Network World)" and evaluated and rated each tool</p>
+									
+	          <img src="images/ratings1.jpg" alt="" />
                   <p> Each team member was assigned a seperate task of providing three vulnerabilities in the working document and recommendations for each (created by Agne). </p>
                   <h3>Personal contribution: Design document</h3>
                   <p> 
