--- a/nism_u7.html
+++ b/nism_u7.html
@@ -1,1 +1,119 @@
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	This is an example of a sub page for each module.  It has to be replicated in each module, containing the requested contents -  artefacts, notes, reflections etc
+	Ensure you give a different title to each replica and link it to the main module page accordingly.
+-->
+<html>
+	<head>
+		<title>Sherelle Garwood</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="css/main.css" />
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo"><span>Sherelle Garwood</span></a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="About.html">About Me</a></li>
+							<li><a href="Launch Module.html">Launching Into Cyber Security</a></li>
+							<li><a href="Module 2.html">Network And Information Security Management</a></li>
+							<li><a href="Module 3.html">Information Risk Management</a></li>
+							<li><a href="Module 4.html">Secure Software Development</a></li>
+							<li><a href="Module 5.html">Secure Systems Architecture</a></li>
+							<li><a href="Module 6.html">The Human Factor</a></li>
+							<li><a href="Project.html">Project</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main" class="alt">
+
+						<!-- One -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Unit 7</h1>
+									</header>
+									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<h3>Unit 7 Overview</h3>
+									<p>During unit 7, we discussed how to gather, analyse and mitigate risks from a security audit session.</p>
+									<h3>Peer Response: Team scanning exercise</h3>
+                  <p> Thank you for sharing your scan results. They appear to be similar to the results of my individual scan and that of some of my team members. Your team located the hosting country to be the United states of America. This was the conclusion I had initially made during scanning. However, our team has debated the reliability of generic IP address locaters, as  they are known to be fairly inaccurate. Kevin (team member) suggested to use the route naming convention, the complete route information and the hop times. Through this, we arrived at the conclusion that the website was actually hosted in Amsterdam- which was the location of one of the hops found whilst using the TRACERT command.
+My suggestion would be to carry out another in-depth search for the hosting country, with this information in mind and see if you and your team arrive at the same conclusion.
+ </p>
+                  <h3>Team meeting minutes: Design document</h3>
+                  <p> This week we met to to discuss the progress made on the Unit 6 design document preparation and prepare for the upcoming seminar. We also briefly spoke about the requirements for the peer review</p>
+                  <p> Each team member was assigned a seperate task of providing three vulnerabilities in the working document and recommendations for each (created by Agne). </p>
+                  <h3>Personal contribution: Design document</h3>
+                  <p> 
+                    <ul>
+<li>Content Security Policy- to prevent cross-site scripting (XSS), clickjacking and other code injection attacks resulting from execution of malicious content</li>
+<li>X XSS Protection- Cross-site filter needed</li>
+<li>No website firewall</li>
+<li>No security headers- for protection against clickjacking and content-type sniffing</li>
+<li>Outdated components (PHP)</li>
+                      </ul>
+                  </p>
+                <p> Identifying the appropriate governing body and associated regulations that apply to our assigned site </p>
+                <p>
+                  <ul>
+                    <li>PCI DSS- Requirements for organisations to accept, store, process, and transmit cardholder data during credit card transaction (4 levels)</li>
+                    <li>The 12 requirements of PCI DSS</li>
+                    <li>GDPR- governs the way in which we can use, process, and store personal data. Ways in which to make websites GDPR compliant: HTTPS, Contact forms, Cookie notice
+                      Notifications for policy updates </li>
+                    <li>The Public Sector Bodies (Websites and Mobile Applications) Accessibility Regulations 2018 </li>
+                    <li>Electronic Commerce (EC Directive)- establishes legal rules that online retailers and service providers must comply with (within the EU)</li>
+
+
+
+
+             
+                 
+								</div>
+							</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
+
+	</body>
+</html>
