--- a/nism_u6.html
+++ b/nism_u6.html
@@ -60,29 +60,11 @@
 
                   <h3>Seminar 3 preparation</h3>
                   <p> I read “Geer, D. (2015) 8 Penetration Testing Tools That Will Do the Job. (Network World)" and evaluated and rated each tool</p>
-									
-	          <img src="images/ratings1.jpg" alt="" />
-                  <p> Each team member was assigned a seperate task of providing three vulnerabilities in the working document and recommendations for each (created by Agne). </p>
-                  <h3>Personal contribution: Design document</h3>
-                  <p> 
-                    <ul>
-<li>Content Security Policy- to prevent cross-site scripting (XSS), clickjacking and other code injection attacks resulting from execution of malicious content</li>
-<li>X XSS Protection- Cross-site filter needed</li>
-<li>No website firewall</li>
-<li>No security headers- for protection against clickjacking and content-type sniffing</li>
-<li>Outdated components (PHP)</li>
-                      </ul>
-                  </p>
-                <p> Identifying the appropriate governing body and associated regulations that apply to our assigned site </p>
-                <p>
-                  <ul>
-                    <li>PCI DSS- Requirements for organisations to accept, store, process, and transmit cardholder data during credit card transaction (4 levels)</li>
-                    <li>The 12 requirements of PCI DSS</li>
-                    <li>GDPR- governs the way in which we can use, process, and store personal data. Ways in which to make websites GDPR compliant: HTTPS, Contact forms, Cookie notice
-                      Notifications for policy updates </li>
-                    <li>The Public Sector Bodies (Websites and Mobile Applications) Accessibility Regulations 2018 </li>
-                    <li>Electronic Commerce (EC Directive)- establishes legal rules that online retailers and service providers must comply with (within the EU)</li>
-
+		 <p> <b> Personal ratings </b></p>
+		  <img src="images/ratings1.jpg" alt="" />
+		<p> <b> Team ratings </b></p>
+		  <img src="images/ratings2.jpg" alt="" />
+                  
 
 
 
