--- a/nism_u7.html
+++ b/nism_u7.html
@@ -54,34 +54,17 @@
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<h3>Unit 7 Overview</h3>
 									<p>During unit 7, we discussed how to gather, analyse and mitigate risks from a security audit session.</p>
-									<h3>Peer Response: Team scanning exercise</h3>
-                  <p> Thank you for sharing your scan results. They appear to be similar to the results of my individual scan and that of some of my team members. Your team located the hosting country to be the United states of America. This was the conclusion I had initially made during scanning. However, our team has debated the reliability of generic IP address locaters, as  they are known to be fairly inaccurate. Kevin (team member) suggested to use the route naming convention, the complete route information and the hop times. Through this, we arrived at the conclusion that the website was actually hosted in Amsterdam- which was the location of one of the hops found whilst using the TRACERT command.
-My suggestion would be to carry out another in-depth search for the hosting country, with this information in mind and see if you and your team arrive at the same conclusion.
- </p>
-                  <h3>Team meeting minutes: Design document</h3>
-                  <p> This week we met to to discuss the progress made on the Unit 6 design document preparation and prepare for the upcoming seminar. We also briefly spoke about the requirements for the peer review</p>
-                  <p> Each team member was assigned a seperate task of providing three vulnerabilities in the working document and recommendations for each (created by Agne). </p>
-                  <h3>Personal contribution: Design document</h3>
-                  <p> 
-                    <ul>
-<li>Content Security Policy- to prevent cross-site scripting (XSS), clickjacking and other code injection attacks resulting from execution of malicious content</li>
-<li>X XSS Protection- Cross-site filter needed</li>
-<li>No website firewall</li>
-<li>No security headers- for protection against clickjacking and content-type sniffing</li>
-<li>Outdated components (PHP)</li>
-                      </ul>
-                  </p>
-                <p> Identifying the appropriate governing body and associated regulations that apply to our assigned site </p>
-                <p>
-                  <ul>
-                    <li>PCI DSS- Requirements for organisations to accept, store, process, and transmit cardholder data during credit card transaction (4 levels)</li>
-                    <li>The 12 requirements of PCI DSS</li>
-                    <li>GDPR- governs the way in which we can use, process, and store personal data. Ways in which to make websites GDPR compliant: HTTPS, Contact forms, Cookie notice
-                      Notifications for policy updates </li>
-                    <li>The Public Sector Bodies (Websites and Mobile Applications) Accessibility Regulations 2018 </li>
-                    <li>Electronic Commerce (EC Directive)- establishes legal rules that online retailers and service providers must comply with (within the EU)</li>
+									<h3>E-portfolio activity</h3>
+                  <p> Kali Linux is a pre-packaged, open-source linux distribution used for penetration testing and computer forensics. It has become increasingly popular with white-hat (ethical hackers). One of the benefits of using Kali Linux is that it is free, making it widely accessible to those using Linux. The platform also has hundreds of penetrating testing tools, allowing in-depth information-gathering and analysis to take place. It also adheres to the Filesystem Hierarchy Standard (FHS), meaning that users are able to find support files and libraries to further support them during testing. However, Kali Linux is often considered to be difficult to use if you are new to Linux as an operating system, which may prevent some ethical hackers from using it. </p>
+<p>Nessus is a remote security scanning tool, used to flag any vulnerabilities found within a device/network. Nessus is beneficial because it is consistently updated, which means that new vulnerabilities are quickly updated to their database, allowing for them to be scanned for. It is also free and open source, meaning that it is widely accessible and users are able to modify it to suit their needs. However, the tool does not always flag vulnerabilities correctly meaning that the user will need to check and verify the vulnerability, which can often be time-consuming.</p>
+<p>Both Kali Linux and Nessus are widely used by ethical hackers and are both considered to be beneficial. Kali Linux is especially useful for those who are fluent users of Linux. Whereas, Nessus is more user friendly but not necessarily allow for the same level of precision.</p>
+<p>References</p>
+<p>Cs.cmu.edu. 2022. Nessus. [online] Available at: <https://www.cs.cmu.edu/~dwendlan/personal/nessus.html> [Accessed 29 April 2022].</p>
+<p>Leroux, S., 2020. The Kali Linux Review You Must Read Before You Start Using it. [online] It's FOSS. Available at: <https://itsfoss.com/kali-linux-review/> [Accessed 27 April 2022].</p>
+<p>www.javatpoint.com. 2020. Advantages and Disadvantages of Kali Linux - javatpoint. [online] Available at: <https://www.javatpoint.com/advantages-and-disadvantages-of-kali-linux> [Accessed 29 April 2022].</p>
 
 
+                  
 
 
              
