--- a/nism_u6.html
+++ b/nism_u6.html
@@ -64,6 +64,8 @@
 		  <img src="images/ratings1.jpg" alt="" />
 		<p> <b> Team ratings </b></p>
 		  <img src="images/ratings2.jpg" alt="" />
+									
+		<p> Team Design Document </p>							
 		<iframe src="https://onedrive.live.com/embed?cid=F9D90B697D54B4B7&amp;resid=F9D90B697D54B4B7%216566&amp;authkey=AN6CCTWcRUl-2zU&amp;em=2" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                   
 
