--- a/generic.html
+++ b/generic.html
@@ -67,6 +67,8 @@
 									<p><a href="nism_u10.html">Unit 10</a></p>
 									<p><a href="nism_u11.html">Unit 11</a></p>
 									<p><a href="nism_u12.html">Unit 12</a></p>
+									<p><a href="nism_matrix.html">Professional Skills Matrix and Action Plan</a></p>
+									
 								</div>
 							</section>
 
