--- a/Module 2.html
+++ b/Module 2.html
@@ -106,7 +106,7 @@ A new Landing page has to be created for each option
 											</header>
 											<p>Unit reflections for internet and information security management</p>
 											<ul class="actions">
-												<li><a href="Reflections.html" class="button">More Information here</a></li>
+												<li><a href="Reflection.html" class="button">More Information here</a></li>
 											</ul>
 										</div>
 									</div>
